--- a/_includes/hobbies.html
+++ b/_includes/hobbies.html
@@ -9,11 +9,8 @@
                     {% if post.category == "hobby" %}
                         <div class="hobby col-xs-12 col-sm-6 col-md-6">
                             <div class="hobby-header">
-                                <h4>
-                                    {{ post.name }}
-                                </h4>
-                                <p>
-                                    {{ post.content }}
+                                <p>    {{ post.name }}
+                                       {{ post.content }}
                                 </p>
                             </div>
                         </div>
