--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -7,7 +7,7 @@
             <div class="row">
                 {% for post in site.posts %}
                     {% if post.category == "project" %}
-                        <div class="project col-xs-12 col-sm-6 col-md-6">
+                        <div class="col-sm-12 col-md-6 col-project">
                             <div class="project-header">
                                 <h4>
                                     {{ post.name }}
