--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -5,7 +5,7 @@
         </div>
             {% for post in site.posts %}
                 {% if post.category == "project" %}
-                    <div class="project col-xs-12 col-sm-6 col-md-6">
+                    <div class="project">
                         <div class="project-header">
                             <h4>
                                 {{ post.name }}
