--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -3,23 +3,25 @@
         <div class="section-title">
             <h3>{{ site.skills }}</h3>
         </div>
-        {% for post in site.posts %}
-            {% if post.category == "skill" %}
-                <div class="skill">
-                    <h6 class="skill-title">
-                        <i class="fa fa-cogs"></i>
-                        {{ post.name }} - {{ post.level }}
-                    </h6>
-                    <div class="skill-level">
-                        <div class="dot-position" style="width: {{ post.value }}">
-                            <i class="dot fa fa-circle"></i>
+        <div class="section-wrapper">
+            {% for post in site.posts %}
+                {% if post.category == "skill" %}
+                    <div class="skill">
+                        <h6 class="skill-title">
+                            <i class="fa fa-cogs"></i>
+                            {{ post.name }} - {{ post.level }}
+                        </h6>
+                        <div class="skill-level">
+                            <div class="dot-position" style="width: {{ post.value }}">
+                                <i class="dot fa fa-circle"></i>
+                            </div>
+                        </div>
+                        <div class="skill-description">
+                            {{ post.content }}
                         </div>
                     </div>
-                    <div class="skill-description">
-                        {{ post.content }}
-                    </div>
-                </div>
-            {% endif %}
-        {% endfor%}
+                {% endif %}
+            {% endfor%}
+        </div>
     </div>
 </div>
