--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
       <div id="content-wrapper">
         <div class="container-fluid content-core">
           {% include intro.html %}
-          <div class="row">
+          <div class="section-wrapper">
             {% include skills.html %}
             {% include education.html %}
             {% include experience.html %}
