--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,8 +12,12 @@
           <div class="section-wrapper">
             {% include skills.html %}
             {% include education.html %}
+          </div>  
+          <div class="section-wrapper">
             {% include experience.html %}
             {% include projects.html %}
+          </div>
+          <div class="section-wrapper">
             {% include languages.html %}
             {% include hobbies.html %}
           </div>
