--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,15 +9,15 @@
       <div id="content-wrapper">
         <div class="container-fluid content-core">
           {% include intro.html %}
-          <div class="section-wrapper">
+          <div class="row">
             {% include skills.html %}
             {% include education.html %}
           </div>  
-          <div class="section-wrapper">
+          <div class="row">
             {% include experience.html %}
             {% include projects.html %}
           </div>
-          <div class="section-wrapper">
+          <div class="row">
             {% include languages.html %}
             {% include hobbies.html %}
           </div>
