--- a/_sass/img.scss
+++ b/_sass/img.scss
@@ -1,4 +1,5 @@
 /* Style the Image Used to Trigger the Modal */
+.projects{
 #myImg {
   border-radius: 5px;
   cursor: pointer;
@@ -76,4 +77,5 @@
   .modal-content {
     width: 100%;
   }
+}
 }
