--- a/_sass/themes.scss
+++ b/_sass/themes.scss
@@ -1,4 +1,5 @@
 ---
+---
 // Theme colors from https://github.com/chriskempson/base16
 
 @mixin theme ($theme-bar-bg, $theme-content-bg, $theme-color, $theme-accent) {
