--- a/css/main.scss
+++ b/css/main.scss
@@ -1,9 +1,10 @@
 ---
 ---
 
-@import "timeline";
-@import "skills";
-@import "themes";
+@import "_sass/timeline";
+@import "_sass/skills";
+@import "_sass/themes";
+
 
 #bar {
   text-align: center;
