--- a/css/main.scss
+++ b/css/main.scss
@@ -1,9 +1,9 @@
 ---
 ---
 
-@import "_sass/timeline";
-@import "_sass/skills";
-@import "_sass/themes";
+@import "alex-papaioannou/home/_sass/timeline";
+@import "alex-papaioannou/home/_sass/skills";
+@import "alex-papaioannou/home/_sass/themes";
 
 
 #bar {
