--- a/css/main.scss
+++ b/css/main.scss
@@ -1,7 +1,10 @@
-@import "/github/workspace/_sass/timeline";
-@import "/github/workspace/_sass/skills";
-@import "/github/workspace/_sass/themes";
+// @import "/github/workspace/_sass/timeline";
+// @import "/github/workspace/_sass/skills";
+// @import "/github/workspace/_sass/themes";
 
+@import "/_sass/timeline";
+@import "/_sass/skills";
+@import "/_sass/themes";
 
 #bar {
   text-align: center;
