--- a/css/main.scss
+++ b/css/main.scss
@@ -2,9 +2,9 @@
 // @import "/github/workspace/_sass/skills";
 // @import "/github/workspace/_sass/themes";
 
-@import "_sass/timeline";
-@import "_sass/skills";
-@import "_sass/themes";
+@import "timeline";
+@import "skills";
+@import "themes";
 
 #bar {
   text-align: center;
