--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,7 +1,10 @@
 // @import "/github/workspace/_sass/timeline";
 // @import "/github/workspace/_sass/skills";
 // @import "/github/workspace/_sass/themes";
+---
+---
 
+@import "{{ site.theme }}";
 @import "timeline";
 @import "skills";
 @import "themes";
