Update and rename main.scss to style.scss
Signed-off-by: Alex Papaioannou <a.papaioannou@columbia.edu>

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,14 +1,10 @@
-// @import "/github/workspace/_sass/timeline";
-// @import "/github/workspace/_sass/skills";
-// @import "/github/workspace/_sass/themes";
 ---
 ---
 
 @import "{{ site.theme }}";
-@import "timeline";
-@import "skills";
-@import "themes";
-@import "theme-default-blue";
+@import "_sass/timeline";
+@import "_sass/skills";
+@import "_sass/themes";
 
 #bar {
   text-align: center;
